corrected carousel alignment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,6 +48,8 @@ nav {
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: space-around;
+  width: 100%;
+  position: fixed;
 }
 
 nav ul {
@@ -117,7 +119,7 @@ nav li:hover {
   margin: 0;
   padding: 1em;
   margin-left: 10%;
-  margin-top: 15%;
+  margin-top: 10%;
   background-color: rgba(0,0,0,.5);
 }
 
@@ -137,7 +139,7 @@ nav li:hover {
 .car-btn {
   position: absolute;
   font-size: 16px;
-  margin-top: 28%;
+  margin-top: 20%;
   margin-left: 10%;
   font-weight: 600;
   border: none;
@@ -155,7 +157,7 @@ nav li:hover {
   width: 75%;
   background-size: cover;
   color: black;
-  font-size: 17px;
+  font-size: 20px;
 }
 
 .right-btn {
